--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
             </div>
             <div class="container">
                 <div class="section_title text-center">
-                    <h2 class="title_w">Royal Facilities</h2>
+                    <h2 class="title_w">Golf Hotel   Facilities</h2>
                     <p>Who are in extremely love with eco friendly system.</p>
                 </div>
                 <div class="row mb_30">
@@ -133,19 +133,19 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
-                            <h4 class="sec_h4"><i class="lnr lnr-car"></i>Rent a Car</h4>
+                            <h4 class="sec_h4"><i class="lnr lnr-car"></i>Parking</h4>
                             <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
-                            <h4 class="sec_h4"><i class="lnr lnr-construction"></i>Gymnesium</h4>
+                            <h4 class="sec_h4"><i class="lnr lnr-construction"></i>Events</h4>
                             <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
-                            <h4 class="sec_h4"><i class="lnr lnr-coffee-cup"></i>Bar</h4>
+                            <h4 class="sec_h4"><i class="lnr lnr-coffee-cup"></i>Bar and Dining</h4>
                             <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                         </div>
                     </div>
@@ -153,6 +153,26 @@
             </div>
         </section>
         <!--================ Facilities Area  =================-->
+        
+        <!--================ About History Area  =================-->
+        <section class="about_history_area section_gap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d_flex align-items-center">
+                        <div class="about_content ">
+                            <h2 class="title title_color"><br>Welcome to The Golf Hotel Kakamega<br></h2>
+                            <p>Explore the Natural beauty & simple joys you are at the Golf Hotel Kakamega located along Khasakhala road, off Kakamega-Kisumu Highway. From all corners of the hotel; be it the restaurants, the bar, the coffee house, the hotel rooms, the relaxing bandas, be rest assured that you will never miss our spectacular & breathtaking views of the greenery areas & ever chapping birds giving your ears an authentic sound of the nature. 
+                                Whether you are coming for a business conference, family or friend’s getaway, group events or a romantic getaway, we go all the amenities to suite your budget & desires. 
+                                .</p>
+                            <a href="#" class="button_hover theme_btn_two">Request Custom Price</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img class="img-fluid" src="image/about_bg.jpg" alt="img">
+                    </div>
+                </div>
+            </div>
+        </section> <!--================ Facilities Area  =================-->
         
         <!--================ Testimonial Area  =================-->
         <section class="testimonial_area section_gap">
